modifs des cors2